force-app/main/default/objects/AM_Student__c/fields/AM_Address__c.field-meta.xml
<CustomField>
    <fullName>AM_Address__c</fullName>
    <label>Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>