force-app/main/default/objects/AM_Student__c/fields/AM_DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>AM_DateOfBirth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>