force-app/main/default/objects/AM_Student__c/fields/AM_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>