force-app/main/default/objects/AM_Student__c/fields/AM_EnrollmentDate__c.field-meta.xml
<CustomField>
    <fullName>AM_EnrollmentDate__c</fullName>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>