force-app/main/default/objects/AM_Student__c/fields/AM_FirstName__c.field-meta.xml
<CustomField>
    <fullName>AM_FirstName__c</fullName>
    <label>First Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>