force-app/main/default/objects/AM_Student__c/fields/AM_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>AM_PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>