force-app/main/default/objects/AM_Student__c/fields/AM_RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>AM_RegistrationDate__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>