force-app/main/default/objects/AM_Student__c/fields/AM_Status__c.field-meta.xml
<CustomField>
    <fullName>AM_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>